# youtube-unofficial

./: .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prettierignore  .pylintrc  .readthedocs.yaml  .wiswa.jsonnet  .yarnrc.yml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE.txt  NOTES.md  README.md  SECURITY.md  _config.yml  mypy.ini  package.json  pyproject.toml  setup.py  sh.tat.youtube-unofficial.yml  snapcraft.yaml
.claude/: settings.local.json.dist
.claude/agents/: badge-sync.md  changelog.md  click-auditor.md  copy-editor.md  coverage-improver.md  docstring-fixer.md  markdownlint-fixer.md  mypy-fixer.md  python-expert.md  python-moderniser.md  qa-fixer.md  regen.md  release.md  test-writer.md  wiswa-sync.md  workflow-shellcheck.md
.claude/rules/: general.md  json-yaml.md  markdown.md  python-tests.md  python.md  toml-ini.md
.claude/skills/ci/: SKILL.md
.claude/skills/regen/: SKILL.md
.cursor/rules/: json-yaml.mdc  markdown.mdc  python-tests.mdc  python.mdc  toml-ini.mdc
.github/: FUNDING.yml  dependabot.yml
.github/instructions/: general.instructions.md  json-yaml.instructions.md  markdown.instructions.md  python-tests.instructions.md  python.instructions.md  toml-ini.instructions.md
.github/workflows/: appimage.yml  codeql.yml  flatpak.yml  markdownlint.yml  prettier.yml  publish.yml  pyinstaller.yml  qa.yml  release.yml  snap.yml  spelling.yml  sync-to-gitlab.yml  tests.yml
.stubs/: bs4.pyi  setuptools.pyi
.yarn/plugins/: plugin-prettier-after-all-installed.cjs
docs/: badges.rst  client.rst  conf.py  constants.rst  index.rst  typing.rst
man/: youtube-unofficial.1
tests/: conftest.py  pyproject.toml  test_client.py  test_download.py  test_main.py  test_session.py  test_utils.py
tests/client/: test_clear_playlist.py  test_clear_watch_history.py  test_get_history_info.py  test_get_history_video_ids.py  test_get_playlist_info.py  test_get_playlist_video_ids.py  test_remove_video_ids_from_history.py  test_response_logged_out.py  test_response_no_feedback.py  test_simple.py  test_toggle_history.py
tests/client/data/: README.md  remove-video-ids-00.json  response-logged-out-00.json  toggle-history-00.json
tests/client/data/clear-playlist/: 00-empty-iter.json  00.json
tests/client/data/clear-watch-history/: 00-button-disabled.json  00.json
tests/client/data/get-history-info/: 00-alt-continuation-response.json  00-bad-continuation.json  00-no-continuation-on-2nd-req-responses.json  00-no-continuation.json  00-no-videos.json  00-with-continuation-response.json
tests/client/data/get-history-video-ids/: 00-bad-video-id-type.json  00-missing-video-id.json  00.json
tests/client/data/get-playlist-info/: 00.json  10-continuation-responses.json  10-continuation.json  10-empty.json
tests/client/data/get-playlist-video-ids/: 20-video-ids-dict.json  20-video-ids.json
youtube_unofficial/: __init__.py  __main__.py  client.py  commands.py  comment.py  community.py  constants.py  download.py  downloaders.py  exceptions.py  initial.py  live_chat.py  login.py  main.py  scripts.py  session.py  util.py  utils.py  ytcfg.py
youtube_unofficial/typing/: __init__.py  browse_ajax.py  guide_data.py  history.py  playlist.py  ytcfg.py
